Fix participant issues